This fixes the overflow at least on pc for the churches page

--- a/src/routes/mtOliveArchive/mtOliveArchive.css
+++ b/src/routes/mtOliveArchive/mtOliveArchive.css
@@ -184,7 +184,7 @@ footer {
 }
 
 .pastor-photo {
-  width: 225px;
+  width: 200px;
   height: 250px;
   margin: 25px 0px 0px 25px;
 }
