--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  width: auto;
+}
+
 body {
   font-family: "century-gothic", sans-serif;
   font-weight: 400;
